

phpVMS Build Changelog:

Build 286 04.15

  * Rank is now editable
  * Adding/Editing rank doesn't throw "Not Number" error
  * Add Schedule form moved out of popup (the form was just too large)
  * Confirmation done by admin, instead of automatic on email confirm
  * All accepted PIREPs for PIREP show up on a map
  * Installer fix
  * Rewrote Google Maps code, class based, makes it easier for add-ons and also any other maps
  * Show some graphs on Pilot Center, like aircraft flown statistics
  * Database updated to fix hitting integer limit on distance/cruise

 Known Problems:
  
  * Add Schedule form has a giant gap in Firefox
  * No email is sent out yet when pilot is accepted or confirmed
  * Default login form is ugly. Yup, it's a problem =D

  * Updated queries:
  	Run these queries to update, change the phpvms_ if your prefix is different

    ALTER TABLE `phpvms_aircraft`
    	CHANGE `range` `range` VARCHAR( 15 ) NOT NULL DEFAULT '0',
		CHANGE `weight` `weight` VARCHAR( 15 ) NOT NULL DEFAULT '0',
		CHANGE `cruise` `cruise` VARCHAR( 15 ) NOT NULL DEFAULT '0';

    ALTER TABLE `phpvms_pilots` MODIFY COLUMN `confirmed` INTEGER UNSIGNED NOT NULL DEFAULT 0;

Build 279

  * Pilot ranks - Add ranks, system calculates hours on PIREP approval, or addition of new ranks
  * Pilot profile shows rank, hours until the next rank
  * Add custom field to popup
  * Settings Form fixed
  * Custom fields form
  * User session had old data, updates on page refresh
  * Add News form fixed
  * Display enhancements
  
Build 277

  * Charts show up on Dashboard (Module based), for some rudimentary stats (more coming)
  * Google Map shows route on "View Report" page
  * Accept/Reject PIREPs in Admin Panel (after accept, adds total flights/hours)
  * About page in Admin Panel
  * Database tables changed to InnoDB, show some respect to the FK and integrity =D
  * "SET FOREIGN_KEY_CHECKS=1;" to compensate for host-specific settings
  * PIREP list view enhancements