@@ -1,7 +1,7 @@
 <h3>Pilot Ranks</h3>
 <p>You can define your pilot ranks here. When a PIREP is accepted, the pilot is automatically placed into the proper ranking.</p>
-<p><a id="dialog" class="jqModal" href="action.php?admin=addrank">Add a rank</a> | 
-	<a href="?admin=calculateranks">Recalculate Ranks</a></p>
+<p><a id="dialog" class="jqModal" href="action.php?admin=addrank"><img src="lib/images/addrank.gif" alt="Add Rank" /></a><!-- |
+	<a href="?admin=calculateranks">Recalculate Ranks</a>--></p>
 <table id="tabledlist" class="tablesorter">
 <thead>
 <tr>
@@ -20,7 +20,7 @@ foreach($ranks as $rank)
 	<td align="center"><?=$rank->minhours; ?></td>
 	<td align="center"><?=$rank->rank; ?></td>
 	<td align="center"><?=$rank->totalpilots; ?></td>
-	<td align="center"><a id="dialog" class="jqModal" href="action.php?admin=editrank&rankid=<?=$rank->rankid;?>">Edit</a></td>
+	<td align="center"><a id="dialog" class="jqModal" href="action.php?admin=editrank&rankid=<?=$rank->rankid;?>"><img src="lib/images/edit.gif" alt="Edit" /></a></td>
 </tr>
 <?php
 }
