@@ -22,7 +22,7 @@ foreach($allfields as $field)
 ?>
 <tr>
 	<td align="center"><?=$field->title;?></td>
-	<td align="center"><a href="action.php?admin=customfields" action="deletefield" id="<?=$field->fieldid;?>" class="ajaxcall">Delete</a></td>
+	<td align="center"><a href="action.php?admin=customfields" action="deletefield" id="<?=$field->fieldid;?>" class="ajaxcall"><img src="lib/images/delete.gif" alt="Delete" /></a></td>
 </tr>
 <?php
 }
